# Kerbodyne-Demo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-release.yml
docs/: offline-region-packs.md  optimization-audit.md  protocol.md  release-checklist.md
fixtures/: demo-replay.ndjson
fixtures/offline-region-pack-example/: manifest.json
scripts/: build_region_pack.py  clean-build-artifacts.ps1  clean-runtime-cache.ps1  tauri-dev-server.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  geometry.rs  lib.rs  main.rs  models.rs  offline_maps.rs  runtime.rs  server.rs
src/components/: AlertDetail.tsx  FlightSavesPanel.tsx  LiveMap.tsx  ReplayTimeline.tsx  SettingsPanel.tsx  TelemetryHud.tsx
src/lib/: confidence.ts  geometry.d.ts  geometry.js  map-style.ts  runtime.ts  time.ts  types.ts
